cluster-components/istio-config/templates/services/tweakers.yaml
---
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: tweakers-net
  namespace: team-backend-accept
spec:
  hosts:
  - tweakers.net
  ports:
  - number: 443
    name: tls
    protocol: TLS
  resolution: DNS
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: direct-to-tweakers-net
  namespace: team-backend-accept
spec:
  parentRefs:
  - kind: ServiceEntry
    group: networking.istio.io
    name: tweakers-net
  rules:
  - backendRefs:
    - group: ''	
      kind: Service
      name: egress-gateway-istio
      port: 443
      weight: 1
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: forward-tweakers-net-from-egress-gateway
  namespace: team-backend-accept
spec:
  parentRefs:
  - name: egress-gateway
  hostnames:
  - tweakers.net
  rules:
  - backendRefs:
    - kind: Hostname
      group: networking.istio.io
      name: tweakers.net
      port: 443
---
# apiVersion: networking.istio.io/v1
# kind: DestinationRule
# metadata:
#   name: egressgateway-for-tweakers-net
#   namespace: team-backend-accept
# spec:
#   host: egress-gateway-istio.istio-egress.svc.cluster.local
#   subsets:
#   - name: tweakers
# ---
# apiVersion: networking.istio.io/v1
# kind: VirtualService
# metadata:
#   name: direct-tweakers-net-through-egress-gateway
#   namespace: team-backend-accept
# spec:
#   hosts:
#   - tweakers.net
#   gateways:
#   - mesh
#   - istio-egress/egress-gateway
#   tls:
#   - match:
#     - gateways:
#       - mesh
#       port: 443
#       sniHosts:
#       - tweakers.net
#     route:
#     - destination:
#         host: egress-gateway-istio.istio-egress.svc.cluster.local
#         subset: tweakers
#         port:
#           number: 443
#   - match:
#     - gateways:
#       - istio-egress/egress-gateway
#       port: 443
#       sniHosts:
#       - tweakers.net
#     route:
#     - destination:
#         host: tweakers.net
#         port:
#           number: 443
#       weight: 100
